# CyberOS__

./: .env.example  API.md  README.md  graph.py  main.py  pyproject.toml
.git_old/: COMMIT_EDITMSG  config  index
.git_old/logs/: HEAD
.git_old/logs/refs/heads/: main
.git_old/refs/heads/: main
api/: jwt_auth.py  request.py  server.py
api/auth/: .env.example  Makefile  README.md  auth.py  nohup.out
api/auth/templates/: initial.html
api/files/: index.py
api/memorys/: config.py  todo.py
api/openai_chat_completions/: chat_completions.py
api/threads/: index.py  messages.py
api/uploads/: index.py
cyberos/io/: agent.md  fileData.py  file_loader.py  loader.py  md_loader.py  new.txt  pdf_loader.py  test.py  test2.py  vl.py
cyberos/io/data_process/: cleaning.py  docx_loader.py  html_loader.py  img_loader.py  loader.py  md_loader.py  pdf_loader.py  tesseract_test.py  test.py  text_utils.py  url_tool.py
cyberos/io/test_file/mine/: agent.md  baoyan.md  table.md
cyberos/memory/: context.py
cyberos/scheduler/: agent.py  async.py  chatbot.py  react_agent.py
cyberos/settings/: configs.py  prompts.py
cyberos/storage/: graph_db.py  remove.py
cyberos/tool/: ability.py
cyberos/tool/skills/: tools.py
cyberos/tool/skills/search/: Google.py  brief_search.py  browse_parse.py  cleaning.py  github.py  llm_test.py  original_search.py  request_url_prase.py  tavily.py  test.py  url_parse.py  wbl.py  web_search.py
cyberos/tool/skills/search/config/: prompts.py
cyberos/tool/skills/task/: task.py  todo.json  tool.json
cyberos/tool/skills/task/reference/: LLMCompiler.ipynb  mindsearch_agent.py  mindsearch_prompt.py  plan-and-execute.ipynb
tests/: tool_node.py
