[tool.poetry]
name = "cyberos"
version = "0.1.0"
description = "AI-NATIVE OS"
authors = ["ZhouYimao <731901968@sjtu.edu.cn>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
langgraph = "^0.2.3"
langgraph-checkpoint = "^1.0.2"
langgraph-checkpoint-postgres = "^1.0.3"
langgraph-checkpoint-sqlite = "^1.0.0"
langchain-community = "^0.2.11"
llama-index = "^0.10.64"
llama-index-graph-stores-neo4j = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
